Change search-bar placeholder text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             id="search"
             type="text"
             class="search__field"
-            placeholder="Search over 1,000,000 recipes..."
+            placeholder="Search for a recipe e.g pizza"
           />
           <button type= "submit" class="btn search__btn">
             <i class="fas fa-search"></i>
