--- a/index.html
+++ b/index.html
@@ -175,6 +175,6 @@
         </button>
       </form>
     </div>
-    <script defer src="src/js/script.js"></script>
+    <script defer src="dist/bundle.js"></script>
   </body>
 </html>
